@@ -1,3 +1,8 @@
+2006-07-09  Chris Taylor  <chris@icculus.org>
+
+	* main/laser.c, main/object.c: fix crash when a robot's guided
+	missile explodes
+
 2006-06-05  Chris Taylor  <chris@icculus.org>
 
 	* main/slew.h: fix error when building editor with RELEASE
